# FoodOps

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
foodops-web/: app.html  index.html  index.vue.html  package-lock.json  package.json  test.html  vite.config.js
foodops-web/dev-dist/: sw.js
foodops-web/src/: App.vue  router.js
foodops-web/src/components/: KitchenTicket.vue  LoginForm.vue  NavBar.vue  OrdenForm.vue  OrdenList.vue  OrderCard.vue  PiezaModal.vue  SelectorComponentesModal.vue
foodops-web/src/data/: menu.js
foodops-web/src/services/: api.js
foodops-web/src/store/: index.js
foodops-web/src/views/: AbastecimientoView.vue  CajaTiendaView.vue  CierreCajaView.vue  ConfigView.vue  DashboardView.vue  DayClosureView.vue  DesperdiciosView.vue  FondosRepartidorView.vue  GastosView.vue  InventarioDiarioView.vue  InventarioView.vue  KitchenView.vue  LoginView.vue  NewOrderView.vue  OrdenesView.vue  OrdersListView.vue  POSMainView.vue  PedidosReabastecimientoView.vue  ReglasReabastecimientoView.vue  StockView.vue
scripts/: crear_transacciones_venta.sql  seed.py
src/foodops/: __init__.py  main.py
src/foodops/api/: router_abastecimiento.py  router_auth.py  router_caja.py  router_config.py  router_gerencia.py  router_ordenes.py  router_stock.py
src/foodops/core/: audit.py  auth.py  config.py  dependencies.py
src/foodops/db/: database.py  models.py  models_caja.py  models_stock.py  seed.py
tests/: conftest.py  test_main.py
tests/unit/: test_models.py  test_seed.py
(+15 files in other folders)
